--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=jdbc:mariadb://localhost:3307/speedrenthu
 spring.datasource.username=speedrenthu
 spring.datasource.password=speedrenthu
-spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
